# idcode

./: .gitignore  LICENSE  README.md  core_values.py  custom_encoding.py  interactive_decoder.py  main.py  preprocessing.py  pyproject.toml
idcode/: cli.py  core_values.py  custom_encoding.py  interactive_decoder.py  preprocessing.py
