[tool.poetry]
name = "idcode"
version = "0.1.4"
description = "交互式检测并解码编码文本。"
authors = ["p0ise <changelf@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/p0ise/idcode"
repository = "https://github.com/p0ise/idcode"
packages = [{include = "idcode"}]

[tool.poetry.dependencies]
python = "^3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
idcode = "idcode.cli:main"